2004-01-26 Alexander Dymo <cloudtemple@mksat.net>
    * Added snippet part by Robert Gruber.

2004-01-24 Jens Dagerbo <jens.dagerbo@swipnet.se>
    * Updated Bookmarks Plugin. Various improvements and fixes.

2004-01-21 Andras Mantia <amantia@kde.org>
    * Fix clear all breakpoints functionality
    
2004-01-21 Jens Dagerbo <jens.dagerbo@swipnet.se>
    * Added ConfigWidgetProxy class to lib/util and initially implemented demand loading of config pages for DocTreeViewPart.

2004-01-09 Amilcar Lucas <a.lucas@tu-bs.de>
   * Easy access to bug reports of every supported language in the documentation browser (except SQL)

2004-01-07 Amilcar Lucas <a.lucas@tu-bs.de>
   * Updated support for Doxygen 1.3.5 cvs HEAD

2003-11-28 F@lk Brettschneider <falkbr@kdevelop.org>
   * old IDEAl look for toolview-buttons is back in IDEAl mode

2003-11-20 F@lk Brettschneider <falkbr@kdevelop.org>
   * latest sync with KMdi of kdelibs-cvsHead (fixes some crashes)
   * enabled kmdiguiclient.h/cpp for KDE less version 3.2 too
   (-> this introduces KDE-accels Ctrl+Shift+Alt+L/R/B/T for IDEAl-docks and Ctrl+Alt+CursorLeft/CursorRight for cycling IDEAl-toolviews)
   * bugfix: proper names of View menu
   * now save the docking state to another section of kdeveloprc (to let people (who tried KMdi alpha versions) escape a vicious cycle)

2003-11-16 Mario Scalas <marioscalas@agilemovement.it>
    * Version control color feedback for the file view (currently implemented 
      by vcs/cvsservice plugin only).

2003-11-13 Amilcar Lucas <a.lucas@tu-bs.de>
    * Readded a even cleaner kdevelop.kdevelop file.
    PLEASE do _not_ commit changes to this file.
    We have until mid January 2004 to make the necessary code changes that create a more "cvs friendly" file by moving some of the options to the .kdevses file.
    For info on how to do it, read:
    http://developer.kde.org/documentation/library/cvs-api/kdevelop/html/howToAddPlugins.html